--- a/index.html
+++ b/index.html
@@ -14,82 +14,76 @@
 
 </head>
 <body>
-    <div>
-        <nav class=" barra navbar navbar-expand-lg navbar-light bg-light fixed-top px-3 py-3">
-            <div class="container ">
-                <a class="navbar-brand" href="#"> viajes chile</a>
+  
+    <nav class=" barra navbar navbar-expand-lg navbar-light bg-light fixed-top px-3 py-3">
+        <div class="container ">
+            <a class="navbar-brand" href="#"> viajes chile</a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse text-white font-wight-bold"  id="navbarNav">
-                    <ul class="navbar-nav ml-auto ">
-                        <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="#inicio">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#info">Quienes somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#destacados">destacados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">contacto</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse text-white font-wight-bold"  id="navbarNav">
+                <ul class="navbar-nav ml-auto ">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#inicio">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#info">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#destacados">destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">contacto</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-
-        <div class="carrusel">
-            <div class="carusel ">
-                    <div id="carouselExampleIndicators" class="carousel slide d-none d-sm-none d-md-block" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active indicator"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1" class="indicator"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2" class="indicator"></li>
-
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="row">
-                                    <div class="col-12 ">
-                                        <img src="assets/img/carousel1.jpg" class="card-img-top img-fluid"alt="slider-1"> 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row">
-                                    <div class="col-12 ">
-                                        <img src="assets/img/carousel2.jpg" class="card-img-top img-luid" alt="slider-2"> 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row">
-                                    <div class="col-12 ">
-                                        <img src="assets/img/carousel3.jpg" class="card-img-top img-luid" alt="slider-3"> 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>  
         </div>
+    </nav>
 
-        <section id="info">
-            <h1>¿Quienes Somos?</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/img/carousel1.jpg"class="d-block w-100" alt="slider1">
+            </div>
 
-            
+            <div class="carousel-item">
+                <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="slider2">
+            </div>
 
+            <div class="carousel-item">
+                <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="slider3">
+            </div>
 
-
-        </section>
-
+        </div>
+        
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
 
     </div>
+
+   
+
+
+    <section id="info" class="py-5">
+
+        <h1 class="text-center">¿Quienes Somos?</h1>
+
+
+
+
+
+    </section>
+
+
+   
     <!--jquery, boostrapjava, mi estilo js-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
     crossorigin="anonymous"></script>
