--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
                         <div class="container bg-info text-center">
                             <i class="fas fa-plane fa-2x " ></i>
                         </div>
-                        <p class="pt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis et odio adipisci eligendi error enim explicabo quod eum non ducimus harum necessitatibus distinctio laborum itaque, obcaecati laboriosam ut accusantium dolore?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium cum sequi iusto quis rem. Error culpa ut fugiat maiores reiciendis? Id incidunt perferendis in mollitia iusto officia saepe non sequi.</p>
+                        <p class="pt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque cumque iste similique libero ratione recusandae exercitationem alias magnam culpa, soluta voluptatem facilis dolorem officiis, excepturi corrupti commodi omnis qui. Excepturi.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet esse, ducimus ipsa eos quas distinctio nobis enim dignissimos consectetur inventore asperiores repellat adipisci similique dicta possimus dolorem obcaecati reiciendis?
+                        </p>
                     
                     </div>
                     <div class="col-sm-12 col-md-4">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et accusantium blanditiis nesciunt ea laudantium nemo, neque odit qui fugiat eligendi nam excepturi saepe suscipit sequi nulla sit quae nihil quam.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque cumque iste similique libero ratione recusandae exercitationem alias magnam culpa, soluta voluptatem facilis dolorem officiis, excepturi corrupti commodi omnis qui. Excepturi.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet esse, ducimus ipsa eos quas distinctio nobis enim dignissimos consectetur inventore asperiores repellat adipisci similique dicta possimus dolorem obcaecati reiciendis?.</p>
                         <div class="container bg-info text-center">
                             <i class="fas fa-mountain fa-2x"></i>
                         </div>
@@ -96,7 +99,8 @@
                         <div class="container bg-info text-center">
                             <i class="fas fa-route fa-2x"></i>
                         </div>
-                        <p class="pt-2 pb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et accusantium blanditiis nesciunt ea laudantium nemo, neque odit qui fugiat eligendi nam excepturi saepe suscipit sequi nulla sit quae nihil quam.</p>
+                        <p class="pt-2 pb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque cumque iste similique libero ratione recusandae exercitationem alias magnam culpa, soluta voluptatem facilis dolorem officiis, excepturi corrupti commodi omnis qui. Excepturi.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis amet esse, ducimus ipsa eos quas distinctio nobis enim dignissimos consectetur inventore asperiores repellat adipisci similique dicta possimus dolorem obcaecati reiciendis?</p>
                         
                     </div>
                 </div>
