desaparece la seccion "quienes somos" en tamaños pequeños

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
 
-        <section id="info" class="container py-5"> 
+        <section id="info" class="container py-5 d-none d-sm-none d-md-block"> 
             <h2 class="text-center py-3"> ¿Quiénes somos?</h2>
             <hr class="linea text-center  bg-info"> 
             <div class="container">
