--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 						<h4 class="text-left ml-5">VIAJES CHILE</h4>
 					</div>
 					<div class="col-md-7 col-sm-12 text-right  ">
-						<a href=""><i class="fab fa-github-square fa-2x icons "></i></a> 
-                        <a href="#"><i class="fab fa-linkedin fa-2x icons "></i></a>
-                        <a href="#"><i class="fab fa-twitter-square fa-2x icons "></i></a>
-                        <a href="#"><i class="fab fa-facebook-square fa-2x icons "></i></a>
+						<a href="https://github.com/Bazz666/"  target="_blank " ><i class="fab fa-github-square fa-2x icons "></i></a> 
+                        <a href="https://www.linkedin.com/" target="_blank "><i class="fab fa-linkedin fa-2x icons "></i></a>
+                        <a href="https://twitter.com/" target="_blank "><i class="fab fa-twitter-square fa-2x icons "></i></a>
+                        <a href="https://www.facebook.com/" target="_blank "><i class="fab fa-facebook-square fa-2x icons "></i></a>
                         
 					</div>
 				</div>
