--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="shortcut icon" type="image/png" href="assets/img/viajes.svg">
         <meta name="author" content="Sergio Herrera">
         <!-- Bootstrap CSS 4.6 -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous"> 
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
         <!--google fonts open sans -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -23,7 +25,7 @@
 
         <!--navbar de bootstrap 4.6 -->
     
-        <nav class=" barra navbar navbar-expand-lg navbar-light bg-light fixed-top  px-3 py-3 font-text-light">
+        <nav class=" barra navbar fixed-top navbar-expand-lg navbar-light bg-light   px-3 py-3 font-text-light">
             <div class="container">
                 <a class="navbar-brand" href="#"><img class="img-nav" src="assets/img/viajes.svg"  alt="viajes"></a>VIAJES CHILE
                 
