--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 						<h4 class="text-left ml-5">VIAJES CHILE</h4>
 					</div>
 					<div class="col-md-7 text-right py-1">
-                        <a href=""><i class="fab fa-github-square fa-2x iconos "></i></a> 
-                        <a href="#"><i class="fab fa-linkedin fa-2x iconos "></i></a>
-                        <a href="#"><i class="fab fa-twitter-square fa-2x iconos "></i></a>
-                        <a href="#"><i class="fab fa-facebook-square fa-2x iconos "></i></a>
+                        <a href=""><i class="fab fa-github-square fa-2x icons "></i></a> 
+                        <a href="#"><i class="fab fa-linkedin fa-2x icons "></i></a>
+                        <a href="#"><i class="fab fa-twitter-square fa-2x icons "></i></a>
+                        <a href="#"><i class="fab fa-facebook-square fa-2x icons "></i></a>
                         
                     </div>
 				</div>
